--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,1 +1,8 @@
-<p>landing works!</p>
+<p>LISTA DE DOCUMENTOS DEL FIRESTORE</p>
+
+<div class="media" *ngFor="let save of savings">
+    <p>Nombre: {{save.nombre}}</p>
+    <p>Dni: {{save.dni}}</p>
+    <p>Monto: {{save.monto}}</p>
+    <hr>
+</div>
