--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,13 @@
 <h1>PACASMAYO - AHORRO</h1>
-<app-landings></app-landings>
-<app-home></app-home>
+<!-- <app-landings></app-landings>
+<app-home></app-home> -->
+
+<ul>
+    <li>
+        <a routerLink="/">Home</a>
+    </li>
+    <li>
+        <a routerLink="/landing">Landing</a>
+    </li>
+</ul>
+<router-outlet></router-outlet>
