--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,3 +1,4 @@
+<p>VISTA DE LANDING</p>
 <p>LISTA DE DOCUMENTOS DEL FIRESTORE</p>
 <div class="media" *ngFor="let save of savings">
     <p>Nombre: {{save.nombre}}</p>
