style in input text of register

--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,16 +1,15 @@
-<div class="center">
+<div class="center container-register">
     <p class="enphasis">¡En Yunta estamos orgullosos de <br> que trabajes para cumplir tus <br>sueños, estamos aqui para
         darte <br>una
         mano!</p>
-    <div class="enphasisSecond center">
+    <div class="enphasisSecond justify">
         <p>Ingresa tu Dni*</p>
-        <input type="number" placeholder="12345678" name="" id="">
+        <input class="custom-input-text" type="number" placeholder="12345678" name="" id="">
         <p>¿Cuál es el nombre de tu familia?</p>
-        <input type="text" placeholder="Perez Lopez" name="" id="">
+        <input class="custom-input-text" type="text" placeholder="Perez Lopez" name="" id="">
         <p>Agrega a tu nucleo familiar</p>
         <p>Ingresa el DNI de tu familiar</p>
-        <input type="number" placeholder="12345678" name="" id="">
+        <input class="custom-input-text" type="number" placeholder="12345678" name="" id="">
         <button class="btn-red-principal">Registrar</button>
     </div>
-
 </div>
