--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 $colorprimario: #fe4a49;
 $colorprimario2: #2ab7ca;
-*
- {
+* {
     font-family: roboto, sans-serif;
 }
 @mixin width-height($width, $height) {
@@ -21,6 +20,7 @@ $colorprimario2: #2ab7ca;
     justify-content: center;
     align-items: center;
     text-align: center;
+    
 }
 .btn-red-principal {
     @include width-height(13em, 4em);
@@ -28,7 +28,7 @@ $colorprimario2: #2ab7ca;
     border: none;
     color: white;
     border-radius: 0.4em;
-    margin:1.1em;
+    margin: 1.1em;
 }
 .btn-outline-red {
     @include width-height(13em, 4em);
@@ -36,4 +36,9 @@ $colorprimario2: #2ab7ca;
     border: 1px solid $colorprimario;
     color: $colorprimario;
     border-radius: 0.4em;
+}
+.custom-input-text {
+    height: 30px;
+    border: 3px solid $colorprimario2;
+    border-radius: 7px;
 }
