--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -2,7 +2,7 @@
     <p class="enphasis">¡En Yunta estamos orgullosos de <br> que trabajes para cumplir tus <br>sueños, estamos aqui para
         darte <br>una
         mano!</p>
-    <div class="enphasisSecond justify">
+    <div class="enphasisSecond center">
         <p>Ingresa tu Dni*</p>
         <input class="custom-input-text" type="number" placeholder="12345678" name="" id="">
         <p>¿Cuál es el nombre de tu familia?</p>
