--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,7 +16,7 @@ $colorprimario2: #2ab7ca;
 }
 .center {
     display: flex;
-    flex-direction: column;
+    flex-flow: wrap column;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -38,6 +38,7 @@ $colorprimario2: #2ab7ca;
     border-radius: 0.4em;
 }
 .custom-input-text {
+    justify-content: center;
     height: 30px;
     border: 3px solid $colorprimario2;
     border-radius: 7px;
