--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 <button class="btn-red-principal" routerLink="register"> ¿Nuevo por aquí?
 </button>
 
-<button class="btn-outline-red" routerLink="register"> ¡Revisa tus ahorros!
+<button class="btn-outline-red" routerLink="home"> ¡Revisa tus ahorros!
 </button>
 </div>
 <router-outlet></router-outlet>
