--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,2 +1,27 @@
-<p>COMPONENTE HOME</p>
-<p>es la vista del Home</p>
+<h1 class="center enphasis ">Bienvenida Familia (nombre)</h1>
+<p>Este mes has ahorrado : cantidad</p>
+<div class="scroll-horizontal wrap center">
+    <div class="box-content">
+
+    </div>
+
+
+    <div class="box-content">
+
+    </div>
+    <div class="box-content">
+
+    </div>
+    <div class="box-content">
+
+    </div>
+    <div class="box-content">
+
+    </div>
+    <div class="box-content">
+
+    </div>
+    <div class="box-content">
+
+    </div>
+</div>
