--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 $colorprimario: #fe4a49;
 $colorprimario2: #2ab7ca;
+$colorsecundario: #fed766;
 * {
     font-family: roboto, sans-serif;
+    scroll-behavior: smooth;
 }
 @mixin width-height($width, $height) {
     width: $width;
@@ -20,7 +22,6 @@ $colorprimario2: #2ab7ca;
     justify-content: center;
     align-items: center;
     text-align: center;
-    
 }
 .btn-red-principal {
     @include width-height(13em, 4em);
@@ -42,4 +43,26 @@ $colorprimario2: #2ab7ca;
     height: 30px;
     border: 3px solid $colorprimario2;
     border-radius: 7px;
+}
+.box-content {
+    border-radius: 7px;
+    width: 180px;
+    height: 100px;
+    display:flex;
+    flex-direction: row;
+    box-sizing: border-box;
+    background-color: $colorprimario2;
+    margin: 7px;
+}
+.scroll-horizontal {
+    
+    overflow: scroll;
+    width: 360px;
+    height: 500px;
+}
+.wrap {
+    display: flex;
+    box-sizing: border-box;
+    flex-flow: column wrap;
+    justify-content: space-around;
 }
