--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@ $colorsecundario: #fed766;
 * {
     font-family: roboto, sans-serif;
     scroll-behavior: smooth;
+    outline:none
 }
 @mixin width-height($width, $height) {
     width: $width;
