maquetando la vista de las cajitas de ahorro

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,27 +1,24 @@
-<h1 class="center enphasis ">Bienvenida Familia (nombre)</h1>
-<p>Este mes has ahorrado : cantidad</p>
-<div class="scroll-horizontal wrap center">
-    <div class="box-content">
-
-    </div>
-
-
-    <div class="box-content">
-
-    </div>
-    <div class="box-content">
-
-    </div>
-    <div class="box-content">
-
-    </div>
-    <div class="box-content">
-
-    </div>
-    <div class="box-content">
-
-    </div>
-    <div class="box-content">
-
+<div class="welcome">
+    <h1 class="center enphasis ">Bienvenida Familia (nombre)</h1>
+    <p>Este mes has ahorrado :</p>
+    <p class="total enphasis">S./ 430.00</p>
+    <div class="boxes-content">
+        <div class="box-content">
+            ALQUILER
+            40%
+            <div class="circular-progress html">                
+            </div>
+            
+        </div>
+        <div class="box-content">
+            LUZ/AGUA
+        </div>
+        <div class="box-content">
+            CASA
+        </div>
+        <div class="box-content box-new">
+            Agregar Cajita
+        </div>
+        
     </div>
 </div>
