--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div  *ngIf="saveNewUser()" class="welcome enphasisSecond">
+<div   class="welcome enphasisSecond">
     <h1 class="enphasis">¡Bienvenida Familia (nombre)!</h1>
     <div class="level-content">
         <p class="pad-margin">Nivel Ahorrado:</p>
