edit border button

--- a/src/app/components/first-view/first-view.component.html
+++ b/src/app/components/first-view/first-view.component.html
@@ -1,7 +1,8 @@
 <div class="center">
-
-    <h1 class="enphasis">YUNTA</h1>
-    <img src="assets/family/familyInPark.png" alt="">
+    <div class="top-bottom">
+        <img src="assets/logo.svg" alt="logo">
+        <img src="assets/family/completeFamily.png" alt="">
+    </div>
     <button class="btn-red-principal" routerLink="register"> ¿Nuevo por aquí?
     </button>
     <button class="btn-outline-red" routerLink="home"> ¡Revisa tus ahorros!
