ordenando el estilo, para reutilizar estilos

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -64,7 +64,7 @@
 
     <div class="report enphasisSecond hide formTwo">
         <h4 class="enphasis center">Tu cajita</h4>
-        <h2 class="enphasis name-box pad">ALQUILER</h2>
+        <h2 class="enphasis width-input pad">ALQUILER</h2>
         <div class="enphasis">
             <p class="pad">Código para depósito</p>
             <p class="pad codigo">44565444-ALQ1</p>
@@ -116,26 +116,26 @@
                 </div>
             </div>
             <p class="enphasis margin">Si no está, define tu propia cajita:</p>
-            <input type="text" class="name-box margin custom-input-text">
-            <button class="btn-red-principal2">Siguiente</button>
+            <input type="text" class="width-input margin custom-input-text">
+            <button class="btn-red-c center">Siguiente</button>
         </div>
         <div>
             <img class="img-paso1" src="../../../assets/paso1.PNG" alt="">
             <img class="img-box" src="../../../assets/box.svg" alt="">
             <p class="enphasisSecond margin">Para Alquiler</p>
             <p class="enphasis margin">¿Cuánto quieres ahorrar?</p>
-            <input type="text" class="name-box margin custom-input-text">
-            <button class="btn-red-principal2">Siguiente</button>
+            <input type="text" class="width-input margin custom-input-text">
+            <button class="btn-red-c center">Siguiente</button>
         </div>
         <div>
             <img class="img-paso1" src="../../../assets/paso1.PNG" alt="">
             <img class="img-box" src="../../../assets/box.svg" alt="">
             <p class="enphasisSecond margin">Para Alquiler</p>
             <p class="enphasis margin">¿Cuánto quieres ahorrar?</p>
-            <input type="text" class="name-box margin custom-input-text">
-            <button class="btn-red-principal2">Siguiente</button>
+            <input type="text" class="width-input margin custom-input-text">
+            <button class="btn-red-c center">Siguiente</button>
         </div>
-        <div>
+        <div class="">
             <img class="img-paso1" src="../../../assets/paso1.PNG" alt="">
             <p class="enphasis margin">Debes llenar tu cajita con:</p>
             <p class="enphasisSecond margin">500</p>
@@ -153,8 +153,7 @@
             </div>
             <p class="enphasisSecond margin">También puedes elegir la fecha que prefieras</p>
             <input type="date">
-            <button class="btn-gray-principal2">Siguiente</button>
-            <button class="btn-red-principal2">Siguiente</button>
+            <button class="btn-red-c">Siguiente</button>
         </div>
     </div>
 </div>
