add componente SignIn y estilos

--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -17,7 +17,7 @@
                 id="">
             <p>Ingresa tu numero telefónico</p>
             <input class="custom-input-text" [(ngModel)]="titularTelefono" type="text" name="" id="">
-            <button (click)="nextView()" class="btn-red-principal">Siguiente</button>
+            <button (click)="nextView()" class="btn-red-c">Siguiente</button>
         </div>
     </div>
 
@@ -43,7 +43,7 @@
         </div>
         <div>
             <button class="btn-outline-red">Omitir</button>
-            <button (click)="lastNext()" class="btn-red-principal">Siguiente</button>
+            <button (click)="lastNext()" class="btn-red-c">Siguiente</button>
         </div>
     </div>
     <div class="hide formThree">
@@ -56,8 +56,7 @@
             <input class="custom-input-text" type="text" name="" id="">
             <p>Confirma tu contraseña</p>
             <input class="custom-input-text" type="text" name="" id="">
-            <button (click)="saveNewUser()" class="btn-red-principal">Registrar</button>
+            <button (click)="saveNewUser()" class="btn-red-c">Registrar</button>
         </div>
     </div>
-
 </div>
