estilos boton componente

--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -18,7 +18,7 @@
             <p>Ingresa tu numero telefónico</p>
             <input class="custom-input-text" required [(ngModel)]="titularTelefono" placeholder="934762000" type="numer"
                 name="" id="">
-            <button (click)="nextView()" class="btn-red-principal">Siguiente</button>
+            <button (click)="nextView()" class="btn-red-c">Siguiente</button>
         </div>
     </div>
 
