--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -10,7 +10,7 @@
         <input class="custom-input-text width-input" [(ngModel)]="titularNombre" type="text" placeholder="45983709"
             name="" id="">
         <p>Ingresa tu contraseña</p>
-        <input class="custom-input-text width-input" [(ngModel)]="titularApellido" type="password" required 
+        <input class="custom-input-text width-input" [(ngModel)]="titularContra" type="password" required 
             name="" id="">
     </div>
     <button class="btn-red-c disablet ">Entrar</button>
