--- a/src/app/components/first-view/first-view.component.html
+++ b/src/app/components/first-view/first-view.component.html
@@ -1,4 +1,4 @@
-<div class="center">
+<div class="center auto column">
     <div class="top-bottom">
         <img src="assets/logo.svg" alt="logo">
         <img src="assets/family/completeFamily.png" alt="">
